style navigation bar and background color of homepage

--- a/lchome.html
+++ b/lchome.html
@@ -15,8 +15,7 @@
     <header>
 
         
-    <h1 id="logo">
-        Lackeen Castle <i class="fas fa-chess-rook"></i> </h1>
+    <h1 id="logo"> Lackeen Castle<i class="fas fa-chess-rook"></i> </h1>
         
                </header>
                <nav>
