--- a/lchome.html
+++ b/lchome.html
@@ -15,7 +15,9 @@
     <header>
 
         
-    <h1 id="logo"> Lackeen Castle<i class="fas fa-chess-rook"></i> </h1>
+    <h1 id="logo"> <i class="fas fa-chess-rook"></i> 
+    <br>
+Lackeen Castle </h1>
         
                </header>
                <nav>
@@ -45,4 +47,6 @@
 </body>
 
 <!--Font awesome icons were used in the making of this website-->
+<script src="https://kit.fontawesome.com/991babbcdf.js" crossorigin="anonymous"></script>
+<a href="https://www.flaticon.com/free-icons/fortress" title="fortress icons">Fortress icons created by Freepik - Flaticon</a>
 </html>
