change font color of content on home page

--- a/lchome.html
+++ b/lchome.html
@@ -30,6 +30,7 @@ Lackeen Castle </h1>
                    </ul>
                </nav>
         <div class="castle-background">
+            <section id="about-lackeen">
 <h2>About Lackeen Castle</h2>
 <h3> When was it built?</h3>
 <p>Lackeen was first built in the 12th century possibly to protect the owners, the O'Kennedy family from Norman invaders. The tower standing now was rebuilt in the 16th century. It kept some scary defensive features. Read on..... </p>
@@ -40,6 +41,7 @@ Lackeen Castle </h1>
 <h3>The O Kennedys</h3>
 <p>The O'Kennedy's are significant on a world scale. They are descended from Cinn Éide, a nephew of Brian Ború, high king of Ireland
  (d.1014). They are ancestors of John F. Kennedy, 35th US president, who made a huge contribution to world history.</p>
+</section>
 </div>
 <h2> Location</h2>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76683.67218478302!2d-8.132926080667888!3d53.08568383928424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485cf5a51510bb97%3A0xe9dcb75a48598f9d!2sAbbeville%2C%20Co.%20Tipperary!5e0!3m2!1sen!2sie!4v1642426418024!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
