--- a/lchome.html
+++ b/lchome.html
@@ -32,15 +32,28 @@ Lackeen Castle </h1>
         <div class="castle-background">
             <section id="about-lackeen">
 <h2>About Lackeen Castle</h2>
+<div id="left-about">
+    <div class="left-about-heading">
 <h3> When was it built?</h3>
-<p>Lackeen was first built in the 12th century possibly to protect the owners, the O'Kennedy family from Norman invaders. The tower standing now was rebuilt in the 16th century. It kept some scary defensive features. Read on..... </p>
+</div>
+
+<p>Lackeen was built in the 12th century by the O'Kennedy family, possibly to repel Norman invaders. The tower standing now was rebuilt in the 16th century. It kept some scary defensive features. Read on..... </p>
+</div>
+<div class="left-about-heading">
 <h3>Defences</h3>
 <p> The O Kennedy's needed to protect themselves from invaderas as medieval Ireland was not a safe place. Click here to see more...</p>
+</div>
+<div id="right-about">
+    <div class="right-about-heading">
 <h3>Stowe Missal</h3>
+</div>
 <p> The castle was refurbished again in the 18th century. A priceless family prayer book was found hidden in the castle wall. This manuscript, called the <em> Stowe Missal</em> is kept in the Royal Irish Academy and contains prayers, Gospels and cures for ailments! It has a spectacular cover box or <em>clúdach</em>.</p>
+<div class="right-about-heading">
 <h3>The O Kennedys</h3>
+</div>
 <p>The O'Kennedy's are significant on a world scale. They are descended from Cinn Éide, a nephew of Brian Ború, high king of Ireland
  (d.1014). They are ancestors of John F. Kennedy, 35th US president, who made a huge contribution to world history.</p>
+ </div>
 </section>
 </div>
 <h2> Location</h2>
