repair nav bar and background image on homepage

--- a/lchome.html
+++ b/lchome.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-
+<!-- header to be copied to all pages-->
         
     <h1 id="logo"> <i class="fas fa-chess-rook"></i> 
     <br>
@@ -29,7 +29,7 @@ Lackeen Castle </h1>
                        <li><a href="lchome.html" class= "active">About Lackeen</a></li>
                    </ul>
                </nav>
-        <div class="castle-background">
+        <div class="castle-background"></div>
             <section id="about-lackeen">
 <h2>About Lackeen Castle</h2>
 <div id="left-about">
@@ -63,5 +63,6 @@ Lackeen Castle </h1>
 
 <!--Font awesome icons were used in the making of this website-->
 <script src="https://kit.fontawesome.com/991babbcdf.js" crossorigin="anonymous"></script>
-<a href="https://www.flaticon.com/free-icons/fortress" title="fortress icons">Fortress icons created by Freepik - Flaticon</a>
+<!--Photo by <a href="https://unsplash.com/@crozyx?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cristi Costantine</a> on <a href="https://unsplash.com/s/photos/ireland-castle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  -->
 </html>
