image round and background color to rgb value

--- a/lchome.html
+++ b/lchome.html
@@ -41,7 +41,7 @@ Lackeen Castle </h1>
 </div>
 <div class="left-about-heading">
 <h3>Defences</h3>
-<p> The O Kennedy's needed to protect themselves from invaderas as medieval Ireland was not a safe place. Click here to see more...</p>
+<p> The O Kennedy's needed to protect themselves from invaders as medieval Ireland was not a safe place. Click here to see more...</p>
 </div>
 <div id="right-about">
     <div class="right-about-heading">
