add footer to home page

--- a/lchome.html
+++ b/lchome.html
@@ -37,11 +37,11 @@
         
         ><h2> Lackeen - the O'Kennedy fortress</h2>
         <ul>
-            <li>This imposing tower in North Tipperary was built nearly 1000 years ago by the O'Kennedys.</li>
+            <li>This imposing tower in North Tipperary was built nearly 1000 years ago by the O'Kennedys, a family that trace their roots to Brian Ború, high king of Ireland. John F. Kennedy, 35th US President, is a descendent..</li>
             <li>The castle has some interesting features to deter enemy invaders. Click here to find out more.</li>
-            <li>A priceless family prayer book- the <em>Stowe Missal</em> was found in the castle walls 300 years ago.
+            <li>A priceless family prayer book- the <em>Stowe Missal</em> a manuscript of national importance, was found in the hidden castle walls 300 years ago. Ir was found  in a beautifully ornate box or <em> clúdach </em>.</li>
             </li>
-            <li>The O'Kennedy family trace their roots to Brian Ború, high king of Ireland. John F. Kennedy, 35th US President, is a descendent.</li>
+            <li></li>
         </ul>
 
         </div>
@@ -51,7 +51,25 @@
     <h2> Location</h2>
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76683.67218478302!2d-8.132926080667888!3d53.08568383928424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485cf5a51510bb97%3A0xe9dcb75a48598f9d!2sAbbeville%2C%20Co.%20Tipperary!5e0!3m2!1sen!2sie!4v1642426418024!5m2!1sen!2sie"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
+
+        <footer>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://www.facebook.com/" target=_blank rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/" target=_blank rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/" target=_blank rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+                </li>
+                
+            </ul>
+        </footer>
 
 </body>
 
