--- a/lchome.html
+++ b/lchome.html
@@ -20,46 +20,54 @@
 
     <!-- header to be copied to all pages-->
     <header>
-        
+
 
         <h1 id="logo"> <i class="fas fa-chess-rook"></i>
             <br>
             Lackeen Castle </h1>
 
-    
-    <nav>
-        <ul id="menu">
 
-            <li><a href="#">More information</a></li>
-            <li><a href="#">Stowe Missal</a></li>
-            <li><a href="#">Castle Defences</a></li>
-            <li><a href="lchome.html" class="active">About Lackeen</a></li>
-        </ul>
-    </nav>
-</header>
-<section id ="info-outer">
-    <div class="castle-background">
-        <div id="info-text">
-            <h2> Lackeen - the O'Kennedy fortress</h2>
-            <ul>
-                <li>This imposing tower in North Tipperary was built nearly 1000 years ago by the O'Kennedys, a family
-                    that trace their roots to Brian Ború, high king of Ireland. John F. Kennedy, 35th US President, is a
-                    descendent..</li>
-                <li>The castle has some interesting features to deter enemy invaders. Click here to find out more.</li>
-                <li>A priceless family prayer book- the <em>Stowe Missal</em> a manuscript of national importance, was
-                    found in the hidden castle walls 300 years ago. Ir was found in a beautifully ornate box or <em>
-                        clúdach </em>.</li>
-                </li>
-                <li></li>
+        <nav>
+            <ul id="menu">
+
+                <li><a href="#">More information</a></li>
+                <li><a href="#">Stowe Missal</a></li>
+                <li><a href="#">Castle Defences</a></li>
+                <li><a href="lchome.html" class="active">About Lackeen</a></li>
             </ul>
+        </nav>
+    </header>
 
+    <!--PICTURE WITH INFORMATION-->
+    <section id="info-outer">
+        <div class="castle-background">
+            <div id="info-text">
+                <h2> Lackeen - the O'Kennedy fortress</h2>
+                <ul>
+                    <li>This imposing tower in North Tipperary was built nearly 1000 years ago by the O'Kennedys, a
+                        family
+                        that trace their roots to Brian Ború, high king of Ireland. John F. Kennedy, 35th US President,
+                        is a
+                        descendent..</li>
+                    <li>The castle has some interesting features to deter enemy invaders. Click here to find out more.
+                    </li>
+                    <li>A priceless family prayer book- the <em>Stowe Missal</em> a manuscript of national importance,
+                        was
+                        found in the hidden castle walls 300 years ago. Ir was found in a beautifully ornate box or <em>
+                            clúdach </em>.</li>
+                    </li>
+
+                </ul>
+
+            </div>
         </div>
 
-    </div>
     </section>
+
+
     <!--Location-->
     <section id="location">
-        <h2 >How to get to Lackeen</h2>
+        <h2>How to get to Lackeen</h2>
         <div id="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76683.67218478302!2d-8.132926080667888!3d53.08568383928424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485cf5a51510bb97%3A0xe9dcb75a48598f9d!2sAbbeville%2C%20Co.%20Tipperary!5e0!3m2!1sen!2sie!4v1642426418024!5m2!1sen!2sie"
