--- a/lchome.html
+++ b/lchome.html
@@ -64,21 +64,30 @@
 
     </section>
 
-    <section id="okennedy-info">
+    <div id="okennedy-info">
     <h2>O' Kennedy family</h2>
     <p>You tend to find the O' Kennedy family front and centre of politics and the arts wherever they live.  
     The Kennedy dynasty are an American 20th century phenomenon, rising to the Presidency. Eunice Kennedy Shriver is founder and patron of the Special Olympics.</p>
 
     <p>Kennedys of note in Ireland are Mary and Sinead Kennedy, RTE broadcasters, and Dermot Kennedy, uber-popular Dublin singer/songwriter.</p>
+</div>
 
 
-</section>
-<section id="kennedy-pics">
+<div class="kennedy-pics">
     <img  src="./assets/images/jfkthumb.jpg" alt="John F Kennedy US President 1960-1963" style="width:100%"> 
-    <figcaption> John F. Kennedy</figcaption>
-    <img  src="./assets/images/EunEunice Kennedy Shriver.png" alt="Eunice Kennedy Shriver, founder of Special Olympics"><figcaption>Eunice Kennedy Shriver</figcaption>
-    <img  src="./assets/images/rocket.jpg" alt="Rocket launch at Kennedy Space Center, US"> <figcaption>Kennedy Space Center</figcaption>
-    <img  src="./assets/images/dermot-kennedy.jpg" alt="Dermot Kennedy, Dublin singer-songwriter"> <figcaption>Dermot Kennedy</figcaption>
+    <figcaption class="desc"> John F. Kennedy</figcaption>
+    </div>
+    <div class="kennedy-pics">
+    <img  src="./assets/images/EunEunice Kennedy Shriver.png" alt="Eunice Kennedy Shriver, founder of Special Olympics">
+    <figcaption class="desc">Eunice Kennedy Shriver</figcaption></div>
+    <div class="kennedy-pics">
+    <img  src="./assets/images/rocket.jpg" alt="Rocket launch at Kennedy Space Center, US"> 
+    <figcaption class="desc">Kennedy Space Center</figcaption>
+    </div>
+    <div class="kennedy-pics">
+    <img  src="./assets/images/dermot-kennedy.jpg" alt="Dermot Kennedy, Dublin singer-songwriter"> 
+    <figcaption class="desc">Dermot Kennedy</figcaption>
+    </div>
 </section>
     <!--Location-->
     <section id="location">
