restyle homepage to study measurement of sections

--- a/lchome.html
+++ b/lchome.html
@@ -18,19 +18,15 @@
 
 <body>
 
-    <!-- header to be copied to all pages-->
-    <header>
+        <header>
 
+        <h1 id="logo"> <i class="fas fa-chess-rook"></i> Lackeen Castle </h1>
 
-        <h1 id="logo"> <i class="fas fa-chess-rook"></i>
-            <br>
-            Lackeen Castle </h1>
-
-
+<!-- nav bar-->      
         <nav>
             <ul id="menu">
 
-                <li><a href="#">More information</a></li>
+                <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Stowe Missal</a></li>
                 <li><a href="#">Castle Defences</a></li>
                 <li><a href="lchome.html" class="active">About Lackeen</a></li>
@@ -40,32 +36,23 @@
 
     <!--castle picture with summary info-->
     <section id="info-outer">
-        <div class="castle-background">
+        <div class="castle-background"></div>
             <div id="info-text">
-                <h2> Lackeen - the O ' Kennedy fortress</h2>
-
-                <p >Lackeen Castle, in the heart of Ireland, was built nearly 1000 years ago and is still standing today.
-                    You can climb to the top and look out over the green fields of North Tipperary.</p>
-                <p>The castle has some interesting features to deter invaders. Click <a href="#"><strong>here</strong></a> to find out more.</p>
-                <p>This tower house was built by the O'Kennedy family, who trace their roots to Brian Ború, high king of
-                    Ireland and count John F. Kennedy, 35th US President,
-                    as a descendant.</p>
-
-
-                <p>A priceless family prayer book- the <em>Stowe Missal</em> ~ a manuscript of national importance,
-                    was
-                    found hidden in the castle walls 300 years ago in a magnificently ornate storage box.</p>
-
+                <h2> Lackeen Castle</h2>
+               
+                <h3> 12th Century O Kennedy fortress </h3>
+                <br> 
+                <h3>Home of the Stowe Missal</h3>
 
 
 
             </div>
-        </div>
+        
 
     </section>
     <section id="okennedy">
         <div id="okennedy-info">
-            <h2>O ' Kennedy family</h2>
+            <h2 id="ok-history">O ' Kennedy family conquer the world</h2>
             <p>You tend to find the O' Kennedy family front and centre of politics and the arts wherever they live.
                 The Kennedy dynasty are an American 20th century phenomenon, rising to the Presidency. Eunice Kennedy
                 Shriver is founder and patron of the Special Olympics.</p>
