finish styling of home page for max-width 1200

--- a/lchome.html
+++ b/lchome.html
@@ -40,8 +40,8 @@
         <div id="info-text">
             <h2> Lackeen Castle</h2>
 
-            <h3> 12th Century O Kennedy fortress </h3>
-            <br>
+            <h3>fortress of O' Kennedy family</h3>
+
             <h3>Home of the Stowe Missal</h3>
 
 
@@ -64,14 +64,14 @@
             <div class="left-about-heading">
                 <h2>Built in the 12th Century</h2>
                 <hr>
-                <p>This tower was built around the time that the Normans invaded Ireland. Nearly 1000 years on, you can
+                <p>Built at the time that the Normans invaded Ireland. You can
                     still climb to the top to see the green fields that surrond Lackeen.</p>
             </div>
 
             <div class="left-about-heading">
                 <h2>The World famous O'Kennedy Clan</h2>
                 <hr>
-                <p>The O'Kennedy/ Kennedy family descended from kings and are well-known in politics and the arts across
+                <p>The O'Kennedy family descended from kings and are well-known in politics and the arts across
                     the world.</p>
             </div>
         </div>
@@ -91,13 +91,13 @@
                     book in a beautifully ornate storage box.</p>
             </div>
         </div>
-    
-    <div id="center-about">
-        <div id="circle-container">
-            <div id="circle-cover-castle"></div>
+
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-castle"></div>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <!--Location-->
     <section id="location">
@@ -105,17 +105,24 @@
         <div id="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76683.67218478302!2d-8.132926080667888!3d53.08568383928424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485cf5a51510bb97%3A0xe9dcb75a48598f9d!2sAbbeville%2C%20Co.%20Tipperary!5e0!3m2!1sen!2sie!4v1642426418024!5m2!1sen!2sie"
-                width="auto" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <div id="directions">
 
-            <h3>Planes <i class="fas fa-plane"></i></h3>
-            <p> From Dublin, take M7 (south). From Shannon, take M7 (East). </p>
-            <h3>Trains <i class="fas fa-train"></i></h3>
-            <p>Nearest stations are Nenagh and Roscrea.</p>
-            <h3>Automobiles <i class="fas fa-car"></i></h3>
-            <p>From Athlone, follow the L236 to Limerick. </p>
-        </div>
+        <ul id="directions">
+            
+            <li>
+                <h3> <i class="fas fa-plane"></i> Planes</h3>
+                <p> From Dublin, take M7 (south). From Shannon, take M7 (East). </p>
+            </li>
+            <li>
+                <h3> <i class="fas fa-train"></i> Trains</h3>
+                <p>Nearest stations are Nenagh and Roscrea.</p>
+            </li>
+            <li>
+                <h3> <i class="fas fa-car"></i> Automobiles</h3>
+                <p>From Birr, follow the R489 towards Portumna. </p>
+            </li>
+        </ul>
     </section>
 
     <footer>
