size homepage for 1200down,1024 down, 850 down

--- a/lchome.html
+++ b/lchome.html
@@ -29,7 +29,7 @@
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Stowe Missal</a></li>
                 <li><a href="#">Castle Defences</a></li>
-                <li><a href="lchome.html" class="active">About Lackeen</a></li>
+                <li><a href="lchome.html" class="active">Home</a></li>
             </ul>
         </nav>
     </header>
@@ -62,14 +62,14 @@
         </div>-->
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Built in the 12th Century</h2>
+                <h2>1000 years old</h2>
                 <hr>
                 <p>Built at the time that the Normans invaded Ireland. You can
                     still climb to the top to see the green fields that surrond Lackeen.</p>
             </div>
 
             <div class="left-about-heading">
-                <h2>The World famous O'Kennedy Clan</h2>
+                <h2>The O'Kennedys </h2>
                 <hr>
                 <p>The O'Kennedy family descended from kings and are well-known in politics and the arts across
                     the world.</p>
@@ -78,7 +78,7 @@
 
         <div id="right-about">
             <div class="right-about-heading">
-                <h2>Castle Defences</h2>
+                <h2> Defences</h2>
                 <hr>
                 <p>This tower has some interesting fetures built in to deter invaders. Click <a href="#">here</a> to
                     find out.</p>
