responsive size of home page for screens425px down

--- a/lchome.html
+++ b/lchome.html
@@ -112,7 +112,7 @@
             
             <li>
                 <h3> <i class="fas fa-plane"></i> Planes</h3>
-                <p> From Dublin, take M7 (south). From Shannon, take M7 (East). </p>
+                <p> From Dublin, take M7 (south).</p><p>From Shannon, take M7 (East). </p>
             </li>
             <li>
                 <h3> <i class="fas fa-train"></i> Trains</h3>
