add and style contact page

--- a/lchome.html
+++ b/lchome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<header>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=dev ice-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 
     <title>Lackeen Castle, Co. Tipperary</title>
-</head>
+</header>
 
 <body>
 
@@ -35,7 +35,7 @@
     </header>
 
     <!--castle picture with summary info-->
-    <section id="info-outer">
+    <section id="summary-outer">
         <div class="castle-background"></div>
         <div id="info-text">
             <h2> Lackeen Castle</h2>
