fix navbar add file names to each header

--- a/lchome.html
+++ b/lchome.html
@@ -26,8 +26,8 @@
         <nav>
             <ul id="menu">
 
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Stowe Missal</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="stowemissal.html">Stowe Missal</a></li>
                 <li><a href="#">Castle Defences</a></li>
                 <li><a href="lchome.html" class="active">Home</a></li>
             </ul>
