--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <ul id="menu">
 
                 <li><a href="contact.html" class="active">Contact Us</a></li>
-                <li><a href="#">Stowe Missal</a></li>
+                <li><a href="stowemissal.html">Stowe Missal</a></li>
                 <li><a href="#">Castle Defences</a></li>
                 <li><a href="lchome.html">Home</a></li>
             </ul>
