add picture gallery to stowemissal.html

--- a/lchome.html
+++ b/lchome.html
@@ -80,7 +80,7 @@
             <div class="right-about-heading">
                 <h2> Defences</h2>
                 <hr>
-                <p>This tower has some interesting fetures built in to deter invaders. Click <a href="#">here</a> to
+                <p>This tower has some interesting features built in to deter invaders. Click <a href="#">here</a> to
                     find out.</p>
             </div>
 
