add picture to castledef.html and style to zoom

--- a/castledef.html
+++ b/castledef.html
@@ -28,15 +28,17 @@
 
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="stowemissal.html">Stowe Missal</a></li>
-                <li><a href="castledef.html">Castle Defences</a></li>
-                <li><a href="lchome.html" class="active">Home</a></li>
+                <li><a href="castledef.html" class="active">Castle Defences</a></li>
+                <li><a href="lchome.html">Home</a></li>
             </ul>
         </nav>
     </header>
 
     <!--castle picture with summary info-->
-    <section id="summary-outer">
-        <div class="castle-background"></div>
+    <section id="defence-outer">
+        <div id="castle-defence" class="zoom">
+            </div>
+        </div>
         <div id="info-text">
             <h2> Lackeen Castle</h2>
 
@@ -139,8 +141,10 @@
                 <a href="https://www.twitter.com/" target=_blank rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
             </li>
-
         </ul>
+            
+        <!--<div id="copyright">  <em> Copyright Lackeen Castle Preservation Society</em> </div>-->
+        
     </footer>
 
 </body>
