--- a/stowemissal.html
+++ b/stowemissal.html
@@ -28,7 +28,7 @@
 
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="stowemissal.html" class="active">Stowe Missal</a></li>
-                <li><a href="#">Castle Defences</a></li>
+                <li><a href="castledef.html">Castle Defences</a></li>
                 <li><a href="lchome.html">Home</a></li>
             </ul>
         </nav>
@@ -77,10 +77,10 @@
         </div>
 
         <div id="right-about">
-            <div class="right-about-heading">
+            <div class="right-about-heading-sm">
                 <h2> The Missal Today</h2>
                 <hr>
-                <p>The Stowe Missal is in the safe keeping of the <a href="https://www.ria.ie/" target=_blank>Royal
+                <p>The Stowe Missal is kept in the <a href="https://www.ria.ie/" target=_blank>Royal
                         Irish Academy</a> in Dublin.</p>
                 <p>The pages can be viewed online and are the subject of much scholarly discussion.</p>
                 <br>
