add content and imgs and style to castledef.html

--- a/stowemissal.html
+++ b/stowemissal.html
@@ -95,7 +95,7 @@
         </div>
 
         <div id="center-about">
-            <div id="pic-container">
+            <div class="pic-container">
                 <div id="pic-missal"></div>
             </div>
         </div>
