--- a/castledef.html
+++ b/castledef.html
@@ -59,7 +59,7 @@
                         height=auto width="30%">-->
             </div>
 
-            <hr>
+            <br>
 
 
             <div class="defence-feat-pic-left">
@@ -84,11 +84,12 @@
                         oil or tar
                         at the enemy below.</p>
                 </div>
-                <div class="defence-pics">
+                
+                <!--<div class="defence-pics">
                     <img src="assets/images/lackeen-mach.jpg"
                         alt="machicolations - 2 rocks sticking out over the castle wall at roof level" height=auto
                         width="30%">
-                </div>
+                </div>-->
             </div>
 
             <div class="defence-feat-pic-left">
