add new defence page

--- a/castledef.html
+++ b/castledef.html
@@ -34,8 +34,7 @@
         </nav>
     </header>
 
-
-    <section id="defence-outer">
+    <section id="defence-background-pic">
         <div id="defence-intro">
             <h2> Keeping out the enemy</h2>
             <p>Ireland was a dangerous place in the 11th century. </p>
@@ -44,86 +43,97 @@
                 and Normans and even wild animals!</p>
             <p> Defending the household was key in castle design in those days.</p>
         </div>
-        <hr>
-        <section class="defence">
-            <div class="defence-feat-pic-right">
-                <div class="defence-fact-left">
-                    <h3> Outer walls</h3>
-                    <p> The walls surrounding the castle, called a <em>bawn</em>, were to protect the people and farm
-                        animals within and keep unwelcome visitors out.</p>
-                </div>
-                <div class="pic-container-def" class="zoom">
-                    <div id="pic-outer-wall" class="zoom"></div>
-                </div>
-                <!--<img src="assets/images/lackeen-castle-view.jpg" alt="Lackeen castle with surrounding lower walls"
+
+        <section id="outer-wall">
+
+            <div class="defence-fact-left">
+                <h3> Narrow windows</h3>
+                <p> Narrow windows- not so good for flooding the room with light, but very handy if you need to
+                    shoot arrows at your enemy without being wounded in return.
+                </p>
+
+            </div>
+            <!--<div class="pic-container-def-right" class="zoom">-->
+            <div id="pic-outer-wall" class="zoom"></div>
+            </div>
+            <!--<img src="assets/images/lackeen-castle-view.jpg" alt="Lackeen castle with surrounding lower walls"
                         height=auto width="30%">-->
+
+        </section>
+        <section id="window">
+
+
+            <div class="defence-fact-right">
+                <h3> Outer walls</h3>
+                <p> The walls surrounding the castle, called a <em>bawn</em>, were to protect the people and farm
+                    animals within and keep unwelcome visitors out.</p>
+
             </div>
-
-            <br>
-
-
-            <div class="defence-feat-pic-left">
-                <div class="defence-fact-right">
-                    <h3> Narrow windows</h3>
-                    <p> Narrow windows- not so good for flooding the room with light, but very handy if you need to
-                        shoot arrows at your enemy within being wounded in return.</p>
-                </div>
-                <div class="pic-container-def" class="zoom">
-                    <div id="pic-windows" class="zoom"></div>
-                </div>
-                    <!--<img src="assets/images/lackeen-little-windows.jpg"
+            <!--<div class="pic-container-def-left" class="zoom">-->
+            <div id="pic-windows" class="zoom"></div>
+            </div>
+            <!--<img src="assets/images/lackeen-little-windows.jpg"
                         alt=" side wall of castle dotted with small rectangluar slit windows" height=auto width="20%">-->
-                
+
+        </section>
+
+        <section id="machic">
+
+            <div class="defence-fact-left">
+                <h3>Machicolations</h3>
+                <p> From these holes at the roof of the castle, the defenders threw rocks, boiling water, boiling
+                    oil or tar
+                    at the enemy below.</p>
             </div>
+            <!--<div class="pic-container-def-right" class="zoom">-->
+            <div id="pic-machic" class="zoom"></div>
+            </div>
+        </section>
 
-
-            <div class="defence-feat-pic-right">
-                <div class="defence-fact-left">
-                    <h3>Machicolations</h3>
-                    <p> From these holes at the roof of the castle, the defenders threw rocks, boiling water, boiling
-                        oil or tar
-                        at the enemy below.</p>
-                </div>
-                
-                <!--<div class="defence-pics">
+        <!--<div class="defence-pics">
                     <img src="assets/images/lackeen-mach.jpg"
                         alt="machicolations - 2 rocks sticking out over the castle wall at roof level" height=auto
                         width="30%">
                 </div>-->
+
+
+        <section id="door">
+            <div class="defence-fact-right">
+                <h3> Murder hole</h3>
+                <p> If the enemy survived the walls, arrows, rocks and hot liquids from above, a defender, hidden in
+                    a hole above the front door was waiting with more. It's not called a <strong>
+                        murder hole</strong> for nothing!
+                </p>
+                <p> Did the castle ghost die there, I wonder.....</p>
+            </div>
+            <!--<div class="pic-container-def-left" class="zoom">-->
+            <div id="pic-door" class="zoom"></div>
             </div>
 
-            <div class="defence-feat-pic-left">
-                <div class="defence-fact-right">
-                    <h3> Murder hole</h3>
-                    <p> If the enemy survived the walls, arrows, rocks and hot liquids from above, a defender, hidden in
-                        a hole above the front door was waiting with more. It's not called a <strong>
-                            murder hole</strong> for nothing!
-                    </p>
-                    <p> Did the castle ghost die there, I wonder.....</p>
-                </div>
-
-                <div class="defence-pics">
+            <!--<div class="defence-pics">
                     <img src="assets/images/lackeen-castle-door1.jpg" alt="stone door entrance Lackeen castle "
                         height=auto width="30%">
                 </div>
-            </div>
+            </div>-->
         </section>
-        <ul class="social-networks">
-            <li>
-                <a href="https://www.facebook.com/" target=_blank rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/" target=_blank rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com/" target=_blank rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
-            </li>
-        </ul>
+</section>
+        <footer>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://www.facebook.com/" target=_blank rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/" target=_blank rel="noopener"
+                        aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/" target=_blank rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+                </li>
+            </ul>
 
-        <!--<div id="copyright">  <em> Copyright Lackeen Castle Preservation Society</em> </div>-->
+            <!--<div id="copyright">  <em> Copyright Lackeen Castle Preservation Society</em> </div>-->
 
         </footer>
 
