style castledef2.html - content

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
                 <li><a href="contact.html" class="active">Contact Us</a></li>
                 <li><a href="stowemissal.html">Stowe Missal</a></li>
-                <li><a href="castledef.html">Castle Defences</a></li>
+                <li><a href="castledef2.html">Castle Defences</a></li>
                 <li><a href="lchome.html">Home</a></li>
             </ul>
         </nav>
