--- a/lchome.html
+++ b/lchome.html
@@ -28,7 +28,7 @@
 
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="stowemissal.html">Stowe Missal</a></li>
-                <li><a href="castledef.html">Castle Defences</a></li>
+                <li><a href="castledef2.html">Castle Defences</a></li>
                 <li><a href="lchome.html" class="active">Home</a></li>
             </ul>
         </nav>
