--- a/lchome.html
+++ b/lchome.html
@@ -50,16 +50,10 @@
 
 
     </section>
+    <!--intro info and summary re Lackeen Castle-->
     <section id="lackeen-summary">
         <h2 id="lackeen-intro">Lackeen Castle -treasure of North Tipperary</h2>
-        <!--
-            <p>You tend to find the O' Kennedy family front and centre of politics and the arts wherever they live.
-                The Kennedy dynasty are an American 20th century phenomenon, rising to the Presidency. Eunice Kennedy
-                Shriver is founder and patron of the Special Olympics.</p>
-
-            <p>Kennedys of note in Ireland are Mary and Sinead Kennedy, RTE broadcasters, and Dermot Kennedy,
-                uber-popular Dublin singer/songwriter.</p>
-        </div>-->
+        
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>1000 years old</h2>
@@ -80,21 +74,23 @@
             <div class="right-about-heading">
                 <h2> Defences</h2>
                 <hr>
-                <p>This tower has some interesting features built in to deter invaders. Click <a href="#">here</a> to
+                <p>This tower has some interesting features built in to deter invaders. Click <a href="castledef2.html">here</a> to
                     find out.</p>
             </div>
 
             <div class="right-about-heading">
                 <h2>Stowe Missal</h2>
                 <hr>
-                <p>A priceless manuscript - <a href="stowemissal.html"></a><em>the Stowe Missal</em></a> -was found hidden in the castle walls 300 years ago. 
-                    The book was likely written in nearby Lorrha and has a beautifully ornate storage box or reliquary. </p>
+                <p>A priceless manuscript - <a href="stowemissal.html"></a><em>the Stowe Missal</em></a> -was found
+                    hidden in the castle walls 300 years ago.
+                    The book was written nearby over 1,000 years ago, and has a beautifully ornate storage box or reliquary.
+                </p>
             </div>
         </div>
 
         <div id="center-about">
             <div id="circle-container">
-                <div id="circle-cover-castle"></div> 
+                <div id="circle-cover-castle"></div>
             </div>
         </div>
     </section>
@@ -109,10 +105,11 @@
         </div>
 
         <ul id="directions">
-            
+
             <li>
                 <h3> <i class="fas fa-plane"></i> Planes</h3>
-                <p> From Dublin, take M7 (south).</p><p>From Shannon, take M7 (East). </p>
+                <p> From Dublin, take M7 (south).</p>
+                <p>From Shannon, take M7 (East). </p>
             </li>
             <li>
                 <h3> <i class="fas fa-train"></i> Trains</h3>
@@ -147,10 +144,6 @@
 
 <!--Font awesome icons were used in the making of this website-->
 <script src="https://kit.fontawesome.com/991babbcdf.js" crossorigin="anonymous"></script>
-<!--Photo by <a
-    href="https://unsplash.com/@libraryofcongress?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Library
-    of Congress</a> on <a
-    href="https://unsplash.com/s/photos/john-f.-kennedy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 
 
 
