add © to contact page

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
          
 <div>
     Thank you for visiting our website. We wish you good health and hope you will visit
-        Lackeen Castle and Tipperary soon.<br><em> Lackeen Castle Preservation Society.</em>
+        Lackeen Castle and Tipperary soon.<br><em> © Lackeen Castle Preservation Society.</em>
 </div></form>
 
                 </section>
