style castledef2.html square the ovals and start ReadME

--- a/castledef2.html
+++ b/castledef2.html
@@ -40,10 +40,10 @@
      <section id="defence-outer">
          <div class="castle-defence-background"></div>
 
-         <div id="info-text-intro">
+         <div id="info-text-intro" class="zoom">
             <h3> defending Lackeen</h3>
    
-            <p>Ireland was a dangerous place 1,000 years ago. Defence was key in castle design to protect the clan from greedy neighbours and Norman invaders.</p>
+            <p>Ireland was a dangerous place 1,000 years ago. Defence was key in castle design to protect the clan from unfriendly clans and Norman invaders. Here are some defence features in Lackeen Castle.</p>
    
             
    
@@ -51,7 +51,7 @@
    
         </div>
      
-     <div id="info-text3">
+     <div id="info-text-door" class="zoom">
          <h3> Murder Hole</h3>
 
          <p>Defenders hid in wait in a hole above the door to attack invaders who bypassed the arrows, rocks and boiling liquids.  <i class="fas fa-long-arrow-alt-right"></i></p>
@@ -61,7 +61,7 @@
 
 
      </div>
-     <div id="info-text2">
+     <div id="info-text-mach" class="zoom">
         <h3> Machicolations</h3>
         <p>Defenders threw rocks, hot sand, tar and boiling liquids on the invaders below from these holes in the floor of the castle rooftop.</p>
 
@@ -70,7 +70,7 @@
 
 
     </div>
-    <div id="info-text1">
+    <div id="info-text-window" class="zoom">
         <h3> Narrow Windows</h3>
 
         <p>For shooting arrows and bullets at invaders without getting hit in return.  <i class="fas fa-long-arrow-alt-right"></i></p>
