--- a/contact.html
+++ b/contact.html
@@ -26,42 +26,59 @@
         <nav>
             <ul id="menu">
 
-                <li><a href="contact.html" class="active">Contact Us</a></li>
-                <li><a href="stowemissal.html">Stowe Missal</a></li>
-                <li><a href="castledef2.html">Castle Defences</a></li>
-                <li><a href="lchome.html">Home</a></li>
+                <li><a href="contact.html" aria-label="Go to the Contact page to book guided tours" class="active">Guided Tours</a></li>
+                <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
+                <li><a href="castledef2.html"aria-label="Go to the castle defences page">Castle Defences</a></li>
+                <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
             </ul>
         </nav>
     </header>
 
-    <!--castle picture with summary info-->
+<!--Contact us-->
+
     <section id="info-outer">
         <div class="castle-background-form">
             <section class="form-section">
-                <form method="post" action="#" class="contact-form">
-                    <h2>Contact us</h2>
-                    <label for="name"> First Name:</label>
-                    <input id="name" class="text-input" name="name" type="text" required>
-
-                    <label for="lname">Last Name:</label>
-                    <input id="lname" class="text-input" name="last_name" type="text" required>
-
+                <form method="get" action="formdestination.html" class="contact-form">
+                    <h2>Contact us to book a guided tour</h2>
+                    <div>
+                    <label for="name" id="name-input"> Name:</label>
+                    <input type= "text" id="name" class="text-input" name="name"  required>
+                    </div>
+<div>
+                    <label for="phone">Phone:</label>
+                    <input id="phone" class="text-input" name="phone" type="text" required>
+</div>
+<div>
 
                     <label for="email">Email Address:</label>
                     <input id="email" class="text-input" name="email_address" type="email" required>
-                    <br>
+                    </div>
+                    <div>
 
-                    <label for="newsletter"> Tick here to subscribe to our annual e-newletter </label><input
+                        <label for="date">Date of Visit:</label>
+                        <input id="date" class="text-input" name="date" type="date" >
+                        </div>
+                        <div>
+
+                            <label for="number">Number of Persons:</label>
+                            <input id="number" class="text-input" name="number" type="number" min="1" max="10" >
+
+                            </div>
+                            <div>
+
+                                <label for="textarea">Special Requirements/Comments:</label>
+                           <textarea aria-label="Textbox" id="message" class="text-input" name="message" rows="10" cols="50" placeholder="Insert your comments or special requirements here"></textarea> 
+                    </div>
+
+                    <label for="newsletter"> <em>Tick here to subscribe to our quarterly e-newletter</em> </label><input
                         id="newsletter" name="newletter" type="checkbox">
 
 
                     <input class="join-button" type="submit" value="SUBMIT">
-<br>
+
          
-<div>
-    Thank you for visiting our website. We wish you good health and hope you will visit
-        Lackeen Castle and Tipperary soon.<br><em> © Lackeen Castle Preservation Society.</em>
-</div></form>
+</form>
 
                 </section>
                     
