--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <nav>
             <ul id="menu">
 
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="stowemissal.html">Stowe Missal</a></li>
-                <li><a href="castledef2.html">Castle Defences</a></li>
-                <li><a href="lchome.html" class="active">Home</a></li>
+                <li><a href="contact.html" aria-label="Go to the Contact page">Contact Us</a></li>
+                <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
+                <li><a href="castledef2.html" aria-label="Go to the castle defence page">Castle Defences</a></li>
+                <li><a href="index.html" class="active" aria-label="Go to the Home page">Home</a></li>
             </ul>
         </nav>
     </header>
