--- a/stowemissal.html
+++ b/stowemissal.html
@@ -29,7 +29,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="stowemissal.html" class="active">Stowe Missal</a></li>
                 <li><a href="castledef2.html">Castle Defences</a></li>
-                <li><a href="lchome.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
