add copyright to footer

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 </header>
 
 <body>
+    <!--Header banner for all pages-->
 
     <header>
 
         <h1 id="logo"> <i class="fas fa-chess-rook"></i> Lackeen Castle </h1>
 
-        <!-- nav bar-->
+
+        <!-- navigation bar-->
         <nav>
             <ul id="menu">
 
@@ -32,9 +34,11 @@
                 <li><a href="index.html" class="active" aria-label="Go to the Home page">Home</a></li>
             </ul>
         </nav>
+        <!--End nav bar-->
     </header>
 
-    <!--castle picture with summary info-->
+    <!--Intro picture and headline-->
+
     <section id="summary-outer">
         <div class="castle-background"></div>
         <div id="info-text">
@@ -45,12 +49,11 @@
             <h3>Home of the Stowe Missal</h3>
 
 
-
         </div>
-
-
     </section>
-    <!--intro info and summary re Lackeen Castle-->
+
+    <!-- Lackeen Castle facts-->
+
     <section id="lackeen-summary">
         <h2 id="lackeen-intro">Lackeen Castle -treasure of North Tipperary</h2>
         
@@ -95,7 +98,11 @@
         </div>
     </section>
 
+    <!--End facts-->
+
+
     <!--Location-->
+
     <section id="location">
         <h2 id="visit-intro">Visit Lackeen castle</h2>
         <div id="map">
@@ -121,6 +128,9 @@
             </li>
         </ul>
     </section>
+    <!--End location-->
+
+    <!--footer-->
 
     <footer>
         <ul class="social-networks">
@@ -138,13 +148,15 @@
             </li>
 
         </ul>
+
+        <p>© Lackeen Castle Preservation Society</p>
     </footer>
 
-</body>
+
 
 <!--Font awesome icons were used in the making of this website-->
 <script src="https://kit.fontawesome.com/991babbcdf.js" crossorigin="anonymous"></script>
 
-
+</body>
 
 </html>
