--- a/contact.html
+++ b/contact.html
@@ -26,49 +26,54 @@
         <nav>
             <ul id="menu">
 
-                <li><a href="contact.html" aria-label="Go to the Contact page to book guided tours" class="active">Guided Tours</a></li>
+                <li><a href="contact.html" aria-label="Go to the Contact page to book guided tours"
+                        class="active">Guided Tours</a></li>
                 <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
-                <li><a href="castledef2.html"aria-label="Go to the castle defences page">Castle Defences</a></li>
+                <li><a href="castledef2.html" aria-label="Go to the castle defences page">Castle Defences</a></li>
                 <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
             </ul>
         </nav>
     </header>
 
-<!--Contact us-->
+    <!--Contact us background-->
 
     <section id="info-outer">
         <div class="castle-background-form">
+
+            <!--Contact  form-->
+
             <section class="form-section">
                 <form method="get" action="formdestination.html" class="contact-form">
                     <h2>Contact us to book a guided tour</h2>
                     <div>
-                    <label for="name" id="name-input"> Name:</label>
-                    <input type= "text" id="name" class="text-input" name="name"  required>
+                        <label for="name" id="name-input"> Name:</label>
+                        <input type="text" id="name" class="text-input" name="name" required>
                     </div>
-<div>
-                    <label for="phone">Phone:</label>
-                    <input id="phone" class="text-input" name="phone" type="text" required>
-</div>
-<div>
+                    <div>
+                        <label for="phone">Phone:</label>
+                        <input id="phone" class="text-input" name="phone" type="text" required>
+                    </div>
+                    <div>
 
-                    <label for="email">Email Address:</label>
-                    <input id="email" class="text-input" name="email_address" type="email" required>
+                        <label for="email">Email Address:</label>
+                        <input id="email" class="text-input" name="email_address" type="email" required>
                     </div>
                     <div>
 
                         <label for="date">Date of Visit:</label>
-                        <input id="date" class="text-input" name="date" type="date" >
-                        </div>
-                        <div>
+                        <input id="date" class="text-input" name="date" type="date">
+                    </div>
+                    <div>
 
-                            <label for="number">Number of Persons:</label>
-                            <input id="number" class="text-input" name="number" type="number" min="1" max="10" >
+                        <label for="number">Number of Persons:</label>
+                        <input id="number" class="text-input" name="number" type="number" min="1" max="10">
 
-                            </div>
-                            <div>
+                    </div>
+                    <div>
 
-                                <label for="textarea">Special Requirements/Comments:</label>
-                           <textarea aria-label="Textbox" id="message" class="text-input" name="message" rows="10" cols="50" placeholder="Insert your comments or special requirements here"></textarea> 
+                        <label for="textarea">Special Requirements/Comments:</label>
+                        <textarea aria-label="Textbox" id="message" class="text-input" name="message" rows="10"
+                            cols="50" placeholder="Insert your comments or special requirements here"></textarea>
                     </div>
 
                     <label for="newsletter"> <em>Tick here to subscribe to our quarterly e-newletter</em> </label><input
@@ -77,11 +82,11 @@
 
                     <input class="join-button" type="submit" value="SUBMIT">
 
-         
-</form>
 
-                </section>
-                    
+                </form>
+
+            </section>
+
         </div>
 
     </section>
@@ -108,15 +113,10 @@
         </ul>
     </footer>
 
+
+
+    <!--Font awesome icons were used in the making of this website-->
+    <script src="https://kit.fontawesome.com/991babbcdf.js" crossorigin="anonymous"></script>
 </body>
-
-<!--Font awesome icons were used in the making of this website-->
-<script src="https://kit.fontawesome.com/991babbcdf.js" crossorigin="anonymous"></script>
-<!--Photo by <a
-    href="https://unsplash.com/@libraryofcongress?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Library
-    of Congress</a> on <a
-    href="https://unsplash.com/s/photos/john-f.-kennedy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-
-
 
 </html>
