--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section id="lackeen-summary">
         <h2 id="lackeen-intro">Lackeen Castle -treasure of North Tipperary</h2>
-        
+
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>1000 years old</h2>
@@ -77,7 +77,8 @@
             <div class="right-about-heading">
                 <h2> Defences</h2>
                 <hr>
-                <p>This tower has some interesting features built in to deter invaders. Click <a href="castledef2.html">here</a> to
+                <p>This tower has some interesting features built in to deter invaders. Click <a
+                        href="castledef2.html">here</a> to
                     find out.</p>
             </div>
 
@@ -86,7 +87,8 @@
                 <hr>
                 <p>A priceless manuscript - <a href="stowemissal.html"></a><em>the Stowe Missal</em></a> -was found
                     hidden in the castle walls 300 years ago.
-                    The book was written nearby over 1,000 years ago, and has a beautifully ornate storage box or reliquary.
+                    The book was written nearby over 1,000 years ago, and has a beautifully ornate storage box or
+                    reliquary.
                 </p>
             </div>
         </div>
@@ -154,8 +156,8 @@
 
 
 
-<!--Font awesome icons were used in the making of this website-->
-<script src="https://kit.fontawesome.com/991babbcdf.js" crossorigin="anonymous"></script>
+    <!--Font awesome icons were used in the making of this website-->
+    <script src="https://kit.fontawesome.com/991babbcdf.js" crossorigin="anonymous"></script>
 
 </body>
 
