--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav>
             <ul id="menu">
 
-                <li><a href="contact.html" aria-label="Go to the Contact page">Contact Us</a></li>
+                <li><a href="contact.html" aria-label="Go to the Contact page to book tour">Guided Tours</a></li>
                 <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
                 <li><a href="castledef2.html" aria-label="Go to the castle defence page">Castle Defences</a></li>
                 <li><a href="index.html" class="active" aria-label="Go to the Home page">Home</a></li>
@@ -85,7 +85,7 @@
             <div class="right-about-heading">
                 <h2>Stowe Missal</h2>
                 <hr>
-                <p>A priceless manuscript - <a href="stowemissal.html"></a><em>the Stowe Missal</em></a> -was found
+                <p>A priceless manuscript - the <a href="stowemissal.html"><em>Stowe Missal</em></a> -was found
                     hidden in the castle walls 300 years ago.
                     The book was written nearby over 1,000 years ago, and has a beautifully ornate storage box or
                     reliquary.
