--- a/castledef2.html
+++ b/castledef2.html
@@ -40,7 +40,7 @@
         <div class="castle-defence-background"></div>
 
         <div id="info-text-intro" class="zoom">
-            <h3> defending Lackeen</h3>
+            <h2> defending Lackeen</h2>
 
             <p>Ireland was a dangerous place 1,000 years ago. Defence was key in castle design to protect the clan from
                 unfriendly clans and Norman invaders. Here are some defence features in Lackeen Castle.</p>
@@ -51,19 +51,14 @@
 
         </div>
 
-        <div id="info-text-door" class="zoom">
-            <h3> Murder Hole</h3>
-
-            <p>Defenders hid in wait in a hole above the door to attack invaders who bypassed the arrows, rocks and
-                boiling liquids. <i class="fas fa-long-arrow-alt-right"></i></p>
-
+        
 
 
 
 
         </div>
         <div id="info-text-mach" class="zoom">
-            <h3> Machicolations</h3>
+            <h2><i class="fas fa-arrow-up"></i> Machicolations</h2>
             <p>Defenders threw rocks, hot sand, tar and boiling liquids on the invaders below from these holes in the
                 floor of the castle rooftop.</p>
 
@@ -73,16 +68,18 @@
 
         </div>
         <div id="info-text-window" class="zoom">
-            <h3> Narrow Windows</h3>
+            <h2> Narrow Windows</h2>
 
             <p>For shooting arrows and bullets at invaders without getting hit in return. <i
-                    class="fas fa-long-arrow-alt-right"></i></p>
-
-
-
+                    class="fas fa-arrow-right"></i></p>
 
 
         </div>
+        <div id="info-text-door" class="zoom">
+            <h3> Murder Hole</h3>
+
+            <p>Defenders hid in wait in a hole above the door to attack invaders who bypassed the arrows, rocks and
+                boiling liquids. <i class="fas fa-long-arrow-alt-right"></i></p>
 
 
 
