fix content position on stowemissal.html

--- a/castledef2.html
+++ b/castledef2.html
@@ -42,7 +42,7 @@
         <div id="info-text-intro" class="zoom">
             <h2> defending Lackeen</h2>
 
-            <p>Ireland was a dangerous place 1,000 years ago. Defence was key in castle design to protect the clan from
+            <p>Ireland was a dangerous place 1,000 years ago. Defence was key in castle design to protect the owner from
                 unfriendly clans and Norman invaders. Here are some defence features in Lackeen Castle.</p>
 
 
@@ -68,19 +68,19 @@
 
         </div>
         <div id="info-text-window" class="zoom">
-            <h2> Narrow Windows</h2>
+            <h2> Narrow Windows  <i
+                class="fas fa-arrow-right"></i></h2>
 
-            <p>For shooting arrows and bullets at invaders without getting hit in return. <i
-                    class="fas fa-arrow-right"></i></p>
+            <p>For shooting arrows and bullets at invaders without getting hit in return. </p>
 
 
         </div>
         <div id="info-text-door" class="zoom">
-            <h3> Murder Hole</h3>
+            <h2> Murder Hole  <i
+                class="fas fa-arrow-right"></i></h2>
 
-            <p>Defenders hid in wait in a hole above the door to attack invaders who bypassed the arrows, rocks and
-                boiling liquids. <i class="fas fa-long-arrow-alt-right"></i></p>
-
+            <p>Defenders hid in a hole above the door to attack invaders who bypassed the arrows, rocks and
+                boiling liquids. Did the ghost of Lackeen die here....?
 
 
     </section>
@@ -105,6 +105,7 @@
             </li>
 
         </ul>
+        <h6>© Lackeen Castle Preservation Society</h6>
     </footer>
 
 
