--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         </ul>
 
-        <p>© Lackeen Castle Preservation Society</p>
+        <h6>© Lackeen Castle Preservation Society</h6>
     </footer>
 
 
