--- a/stowemissal.html
+++ b/stowemissal.html
@@ -48,11 +48,11 @@
     </section>
 
     <section id="sm-summary">
-        <h2 id="lackeen-intro">Stowe Missal -treasure found in the castle walls</h2>
+        <h2 id="lackeen-intro">Stowe Missal - treasure in the castle walls</h2>
 
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Origin</h2>
+                <h2>what is it?</h2>
                 <hr>
                 <p>This diminutive 11th century manuscript in its ornate reliquary or storage box, was found in the
                     walls of Lackeen Castle during its renovation in the 1700's. </p>
@@ -70,11 +70,12 @@
 
         <div id="right-about">
             <div class="right-about-heading-sm">
-                <h2> The Missal Today</h2>
+                <h2> Where is it?</h2>
+                
                 <hr>
                 <p>The Stowe Missal is kept in the <a href="https://www.ria.ie/" target=_blank>Royal
-                        Irish Academy</a> in Dublin.</p>
-                <p>The pages can be viewed online and are the subject of much scholarly discussion.</p>
+                        Irish Academy</a> in Dublin. The pages can be viewed online</p>
+                
                 <br>
                 <p> Lorrha Historical Society are in discussions with the RIA to allow the manuscript to be exhibited in
                     Lackeen Castle.</p>
@@ -96,7 +97,7 @@
     <!--stowe missal picture gallery-->
     <section id="sm-pics">
 
-        <h2 id="lackeen-intro">Stowe Missal pictures</h2>
+        <h2 id="lackeen-intro">Images of the Stowe Missal</h2>
         <div class="sm-gallery">
             <img src="assets/images/sm-fpage.jpg" alt="front of Stowe Missal jewelled storage box">
             <div class="desc">First page of the Stowe Missal.</div>
@@ -137,6 +138,7 @@
             </li>
 
         </ul>
+        <h6>© Lackeen Castle Preservation Society</h6>
     </footer>
 
 
