--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div id="info-text">
             <h2> Lackeen Castle</h2>
 
-            <h3>fortress of O' Kennedy family</h3>
+            <p>fortress of O' Kennedy family</p>
 
-            <h3>Home of the Stowe Missal</h3>
+            <p>Home of the Stowe Missal</p>
 
 
         </div>
@@ -116,17 +116,19 @@
         <ul id="directions">
 
             <li>
-                <h3> <i class="fas fa-plane"></i> Planes</h3>
-                <p> From Dublin, take M7 (south).</p>
-                <p>From Shannon, take M7 (East). </p>
+                <p> <i class="fas fa-plane"></i>
+                  From Dublin, take M7 (south).
+                From Shannon, take M7 (East). </p>
             </li>
+            <br>
             <li>
-                <h3> <i class="fas fa-train"></i> Trains</h3>
-                <p>Nearest stations are Nenagh and Roscrea.</p>
+                <p> <i class="fas fa-train"></i> 
+                    Nearest stations are Nenagh and Roscrea.</p>
             </li>
+            <br>
             <li>
-                <h3> <i class="fas fa-car"></i> Automobiles</h3>
-                <p>From Birr, follow the R489 towards Portumna. </p>
+                <p> <i class="fas fa-car"></i> 
+                    From Birr, follow the R489 towards Portumna. </p>
             </li>
         </ul>
     </section>
