media quieries for 426 px down adjust menu and logo

--- a/stowemissal.html
+++ b/stowemissal.html
@@ -26,12 +26,10 @@
         <nav>
             <ul id="menu">
 
-                <li><a href="contact.html" aria-label="Go to the Contact page to book guided tours">Guided Tours</a>
-                    </li>
-                    <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page" class="active">Stowe
-                            Missal</a></li>
-                    <li><a href="castledef2.html" aria-label="Go to the castle defences page">Castle Defences</a></li>
-                    <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
+                <li><a href="castledef2.html"aria-label="Go to the castle defences page">Castle Defences</a></li>
+                <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
+                <li><a href="contact.html"aria-label="Go to the contact and booking page">Guided Tours</a></li>
+                <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
             </ul>
         </nav>
     </header>
