--- a/castledef2.html
+++ b/castledef2.html
@@ -25,11 +25,12 @@
         <!-- nav bar-->
         <nav>
             <ul id="menu">
-
-                <li><a href="contact.html" aria-label="Go to the Contact page to book guided tours">Guided Tours</a></li>
-                <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
-                <li><a href="castledef2.html" class="active" aria-label="Go to the castle defences page">Castle Defences</a></li>
+                <li><a href="castledef2.html"aria-label="Go to the castle defences page">Castle Defences</a></li>
                 <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
+                <li><a href="contact.html"aria-label="Go to the contact and booking page">Guided Tours</a></li>
+                <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
+
+               
             </ul>
         </nav>
     </header>
