--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/lcstyle.css">
 
 
-    <title>Lackeen Castle, Co. Tipperary</title>
+    <title>Contact Lackeen Castle  </title>
 </head>
 
 <body>
@@ -26,11 +26,10 @@
         <nav>
             <ul id="menu">
 
-                <li><a href="contact.html" aria-label="Go to the Contact page to book guided tours"
-                        class="active">Guided Tours</a></li>
-                <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
-                <li><a href="castledef2.html" aria-label="Go to the castle defences page">Castle Defences</a></li>
+                <li><a href="castledef2.html"aria-label="Go to the castle defences page">Castle Defences</a></li>
                 <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
+                <li><a href="contact.html"aria-label="Go to the contact and booking page">Guided Tours</a></li>
+                <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
             </ul>
         </nav>
     </header>
