--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <!-- navigation bar-->
         <nav>
             <ul id="menu">
-
-                <li><a href="contact.html" aria-label="Go to the Contact page to book tour">Guided Tours</a></li>
+                <li><a href="castledef2.html"aria-label="Go to the castle defences page">Castle Defences</a></li>
+                <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
+                <li><a href="contact.html"aria-label="Go to the contact and booking page">Guided Tours</a></li>
                 <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
-                <li><a href="castledef2.html" aria-label="Go to the castle defence page">Castle Defences</a></li>
-                <li><a href="index.html" class="active" aria-label="Go to the Home page">Home</a></li>
+
+            
             </ul>
         </nav>
         <!--End nav bar-->
