media query stoe missal page foe screens 426 and down

--- a/stowemissal.html
+++ b/stowemissal.html
@@ -49,7 +49,7 @@
         <h2 id="lackeen-intro">Stowe Missal - treasure in the castle walls</h2>
 
         <div id="left-about">
-            <div class="left-about-heading">
+            <div class="left-about-heading-sm">
                 <h2>what is it?</h2>
                 <hr>
                 <p>This diminutive 11th century manuscript in its ornate reliquary or storage box, was found in the
