--- a/formdestination.html
+++ b/formdestination.html
@@ -40,7 +40,7 @@
 
 <section id="summary-outer">
     <div class="castle-background"></div>
-    <div id="info-text">
+    <div id="info-text-fdest">
         <h2> Thank you!</h2>
 
         <p>We will contact you soon.</p>
