intro and UX of readme

--- a/stowemissal.html
+++ b/stowemissal.html
@@ -36,7 +36,7 @@
 
     <section id="summary-outer">
         <div class="stowe-missal-background"></div>
-        <div id="info-text">
+        <div id="info-text-sm">
             <h2> The Stowe Missal</h2>
             <h3>Manuscript of national importance</h3>
 
