--- a/stowemissal.html
+++ b/stowemissal.html
@@ -26,9 +26,9 @@
         <nav>
             <ul id="menu">
 
-                <li><a href="contact.html" aria-label="Go to the contact and booking page">Guided Tours</a></li>
+                <li><a href="contact.html" aria-label="Go to the contact and booking page">Tours</a></li>
                 <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
-                <li><a href="castledef2.html" aria-label="Go to the castle defences page">Castle Defences</a></li>
+                <li><a href="castledef2.html" aria-label="Go to the castle defences page">Defences</a></li>
                 <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
             </ul>
         </nav>
@@ -96,7 +96,7 @@
     <!--stowe missal picture gallery-->
     <section id="sm-pics">
 
-        <h2 id="lackeen-intro">Images of the Stowe Missal</h2>
+        <h2>Images of the Stowe Missal</h2>
         <div class="sm-gallery">
             <img src="assets/images/sm-fpage.jpg" alt="front of Stowe Missal jewelled storage box">
             <div class="desc">First page of the Stowe Missal.</div>
