--- a/castledef2.html
+++ b/castledef2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<header>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=dev ice-width, initial-scale=1.0">
@@ -11,7 +11,8 @@
     <!--Link to Stylesheet-->
 
     <link rel="stylesheet" href="assets/css/lcstyle.css">
-
+</header>
+<head>
 
     <title>Lackeen Castle defence</title>
 </head>
