--- a/formdestination.html
+++ b/formdestination.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<header>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=dev ice-width, initial-scale=1.0">
@@ -11,10 +11,11 @@
     <!--Link to Stylesheet-->
 
     <link rel="stylesheet" href="assets/css/lcstyle.css">
-
-
+</header>
+<head></head>
     <title>Lackeen form destination</title>
 </head>
+
 
 <body>
 
