fix header and footer on all pages and amend color<a>

--- a/castledef2.html
+++ b/castledef2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<header>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=dev ice-width, initial-scale=1.0">
@@ -11,25 +11,35 @@
     <!--Link to Stylesheet-->
 
     <link rel="stylesheet" href="assets/css/lcstyle.css">
-</header>
-<head>
 
-    <title>Lackeen Castle defence</title>
+
+    <title>Lackeen Castle</title>
 </head>
 
 <body>
+    <!--Header banner for all pages-->
 
     <header>
 
         <h1 id="logo"> <i class="fas fa-chess-rook"></i> Lackeen Castle </h1>
 
-        <!-- nav bar-->
+
+        <!-- navigation bar-->
         <nav>
             <ul id="menu">
-                <li><a href="contact.html" aria-label="Go to the contact and booking page">Tours</a></li>
-                <li><a href="stowemissal.html" aria-label="Go to the Stowe Missal page">Stowe Missal</a></li>
-                <li><a href="castledef2.html" aria-label="Go to the castle defences page">Defence</a></li>
-                <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
+                <li>
+                    <a href="index.html" id="active" class="navlink"aria-label="Go to Lackeen Castle home page">Home</a>
+                </li>
+                <li>
+                    <a href="castledef2.html" class="navlink" aria-label="Go to the castle defences page"> Defences</a>
+                </li>
+                <li>
+                    <a href="stowemissal.html" class="navlink" aria-label="Go to the Stowe Missal page">Stowe Missal</a>
+                </li>
+                
+                <li>
+                    <a href="contact.html" class="navlink" aria-label="Go to the booking page">Tours</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -105,7 +115,8 @@
             </li>
 
         </ul>
-        <h6>© Lackeen Castle Preservation Society</h6>
+
+        <h5>© Lackeen Castle Preservation Society 2022</h5>
     </footer>
 
 
