--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Lackeen Castle facts-->
 
     <section id="about-lackeen" aria-labelledby="about-lackeen-text about-lackeen-image">
-        <h2>About Lackeen Castle</h2>
+        <h2>About Lackeen Castle......</h2>
 
         <div id="about-lackeen-text">
 
@@ -102,7 +102,7 @@
     <!--Location-->
 
     <section id="location" aria-labelledby="lackeen-map contact-text">
-        <h2>Visit Lackeen Castle</h2>
+        <h2>See Lackeen Castle for yourself.....</h2>
         <div id="lackeen-map">
             <iframe title="Map"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76678.83392767832!2d-8.12610191482304!3d53.08839942476288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485cf5a51510bb97%3A0xe9dcb75a48598f9d!2sAbbeville%2C%20Co.%20Tipperary!5e0!3m2!1sen!2sie!4v1643988558411!5m2!1sen!2sie"
